objects/Blood_Donar__c.object
<CustomObject>
    <label>Blood Donar</label>
    <nameField>
        <displayFormat>BD-{000}</displayFormat>
        <label>DonarId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blood Donars</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>ROUND((TODAY() -  DOB__c  ) / 365, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>about date of birth</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Districts</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Blood_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Donated_date__c</fullName>
        <label>Last Donated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RemainingDaysToDonate__c</fullName>
        <formula>If((TODAY()-Last_Donated_date__c )&lt;90,90-(TODAY()-Last_Donated_date__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RemainingDaysToDonate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Blood_Donation__c</fullName>
        <formula>AND(Age__c&gt;18,Weight__c&gt;50, TODAY()-Last_Donated_date__c&gt;90)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for Blood Donation</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Age</fullName>
        <active>true</active>
        <errorConditionFormula>Age__c &lt;18</errorConditionFormula>
        <errorMessage>Age should be greater than 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone</fullName>
        <active>true</active>
        <errorConditionFormula>OR((LEN( Phone_Number__c ) !=10 ),NOT(ISNUMBER( Phone_Number__c)))</errorConditionFormula>
        <errorMessage>Phone Number should have 10 digits,</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weight</fullName>
        <active>true</active>
        <errorConditionFormula>Weight__c &lt;50</errorConditionFormula>
        <errorMessage>Weight Should be geater than 50</errorMessage>
    </validationRules>
</CustomObject>